[gd_scene load_steps=6 format=3 uid="uid://csoq4cw5js4bc"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_3jl6y"]
[ext_resource type="FontFile" uid="uid://0jrk3kh3t8wc" path="res://fonts/RuthlessSketch-q2xD6.ttf" id="2_k5you"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0t6ep"]
bg_color = Color(0.372549, 0.498039, 0.305882, 1)
border_color = Color(0.903598, 0.903598, 0.903598, 1)
shadow_size = 5
shadow_offset = Vector2(5, 5)

[sub_resource type="LabelSettings" id="LabelSettings_c25d4"]
font = ExtResource("2_k5you")
font_size = 50
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_iljkj"]
font = ExtResource("2_k5you")
font_size = 20
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3jl6y")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0t6ep")

[node name="Header" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -167.0
offset_top = -152.0
offset_right = 167.0
offset_bottom = -57.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 6

[node name="Title" type="Label" parent="Panel/Header"]
layout_mode = 2
text = "SECRET GARDEN"
label_settings = SubResource("LabelSettings_c25d4")
horizontal_alignment = 1

[node name="Author" type="Label" parent="Panel/Header"]
layout_mode = 2
text = "Game by sh1ft15"
label_settings = SubResource("LabelSettings_iljkj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -167.0
offset_top = 54.0
offset_right = 167.0
offset_bottom = 155.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 6
theme_override_constants/separation = 15

[node name="Start" type="Button" parent="Panel/Buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_k5you")
theme_override_font_sizes/font_size = 40
text = "Start"

[node name="Tutorial" type="Button" parent="Panel/Buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_k5you")
theme_override_font_sizes/font_size = 30
text = "Tutorial"

[node name="Credit" type="Button" parent="Panel/Buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_k5you")
theme_override_font_sizes/font_size = 30
text = "Credit"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = -2.0
pitch_scale = 2.0

[connection signal="mouse_entered" from="Panel/Header" to="." method="_on_header_mouse_entered"]
[connection signal="mouse_exited" from="Panel/Header" to="." method="_on_header_mouse_exited"]
[connection signal="mouse_entered" from="Panel/Buttons/Start" to="." method="_on_start_mouse_entered"]
[connection signal="pressed" from="Panel/Buttons/Start" to="." method="_on_start_pressed"]
[connection signal="mouse_entered" from="Panel/Buttons/Tutorial" to="." method="_on_credit_mouse_entered"]
[connection signal="pressed" from="Panel/Buttons/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="mouse_entered" from="Panel/Buttons/Credit" to="." method="_on_credit_mouse_entered"]
[connection signal="pressed" from="Panel/Buttons/Credit" to="." method="_on_credit_pressed"]
